...
    android:paddingEnd="12dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- coin icon corresponding to value and currency -->
    <TextView
        android:id="@+id/coin_icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
...
        android:layout_marginStart="24dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/coin_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/item_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

...
