<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/ic_account_balance_wallet_black_24dp"
            android:title="@string/wallet" />
        <item
            android:id="@+id/nav_shop"
            android:icon="@drawable/shop"
            android:title="@string/shop" />
        <item
            android:id="@+id/nav_bank"
            android:icon="@drawable/bank"
            android:title="@string/bank" />
        <item
            android:id="@+id/nav_send_coins"
            android:icon="@drawable/send_coin"
            android:title="@string/send_coins" />
        <item
            android:id="@+id/nav_received_coins"
            android:icon="@drawable/receive_coin"
            android:title="@string/received_coins" />
        <item
            android:id="@+id/nav_leaderboard"
            android:icon="@drawable/leaderboard"
            android:title="@string/leaderboard"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/sign_out"
            android:title="@string/sign_out" />
    </group>

</menu>