...
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:text="@string/discard_coin" />

        <Button
            android:id="@+id/pay_in_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/pay_in_bank" />
    </LinearLayout>
...
