...
        app:layout_constraintStart_toEndOf="@+id/header_vision_range"
        app:layout_constraintTop_toBottomOf="@+id/vision_range_icon"
        app:srcCompat="@drawable/gold"
        tools:ignore="ContentDescription"/>

    <TextView
        android:id="@+id/header_gold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/gold_icon"
...
